# its-allah

./: Attributes_of_Allah_by_Ibn_Uthaymeen.md  CLAUDE.md  README.md  innahu_allah.db  plan.md  pyproject.toml
data/: source_registry.yaml
data/extraction/ibn_uthaymeen/: clean_pages.json  extraction_log.md  raw_pages.json  review_log.md
data/samples/: kfgqpc_hafs_sample.json  tanzil_hafs_sample.json
db/: schema.sql
exports/: approved_book.md  approved_content.json  quran_diff_no_normalization.md  quran_mismatch_404_analysis.md
innahu_allah/: cli.py  db.py
innahu_allah/etl/: seed_fatihah.py
innahu_allah/exporters/: approved_export.py
innahu_allah/web/: app.py
innahu_allah/web/static/: styles.css
innahu_allah/web/templates/: admin.html  base.html  home.html  mushaf.html  name.html
laravel-app/app/Console/Commands/: ExportApprovedCommand.php  QuranCompareTanzilCommand.php  (+2 more)
laravel-app/app/Services/: ApprovedExportService.php  QuranTextNormalizer.php
laravel-app/bootstrap/: app.php
laravel-app/database/migrations/: 2026_04_21_170000_add_role_to_users_table.php  2026_04_21_170100_create_innahu_allah_tables.php  2026_04_22_210000_add_qiraah_riwayah_to_quran_verses.php  2026_04_22_210100_create_quran_ingestion_runs_table.php  2026_04_22_210200_create_quran_verse_diffs_table.php
laravel-app/routes/: web.php
project reaplantion/: STATUS.md  approved_content.md  approved_export.md  full_progress_so_far.md  seed_fatihah.md  step1_quran_ingestion_plan.md  step1_runbook.md  yaml.md
scripts/: extract_ibn_uthaymeen_pages.py  smoke_test.py
(+10 files in other folders)
