[project]
name = "innahu-allah"
version = "0.1.0"
description = "Innahu Allah platform implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.12",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "pydantic>=2.11.4",
  "python-multipart>=0.0.20",
  "uvicorn>=0.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
